--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -61,6 +61,10 @@ on boot
     chmod 0660 /dev/smd7
     chown bluetooth bluetooth /dev/smd7
 
+    #Set SUID bit for usbhub
+    chmod 0755 /system/bin/usbhub
+    chmod 0755 /system/bin/usbhub_init
+
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
     # For bridgemgr daemon to inform the USB driver of the correct transport
@@ -212,6 +216,20 @@ on post-fs-data
     chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
 
     setprop vold.post_fs_data_done 1
+
+# Export GPIO56 for fusion targets to enable/disable hub
+service usbhub_init /system/bin/usbhub_init
+   class late_start
+   user root
+   disabled
+   oneshot
+
+on property:init.svc.surfaceflinger=stopped
+    stop ppd
+    stop hdmid
+
+on property:ro.board.platform=msm7630_fusion
+    start usbhub_init
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
