symlink sdcard0 to /sdcard and /mnt/sdcard, for backwards compatibility
Change-Id: I98e3085aa89f60b16329eb5484dea1e006f31288

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -39,6 +39,10 @@ on init
     export EXTERNAL_STORAGE /storage/sdcard1
     export SECONDARY_STORAGE /storage/sdcard0
 
+    # for backwards compatibility
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+
 on boot
     mount debugfs debugfs /sys/kernel/debug
 
