--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -360,3 +360,8 @@ service akmd /system/bin/akmd8963
     class main
     disabled
     oneshot
+
+service charger /sbin/healthd -c
+    class charger
+    critical
+    seclabel u:r:healthd:s0
